add some correction
add background color on p for index. delete the incorrection on contact

--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,12 @@
     <title>Stefanie Anselmi</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body class="text-center"></body>>
+  <body class="text-center">
     <h1>Contact</h1>
-    <p>To contact animation.com, please email us at hello@animation.com for more info/p>
+    <p>
+      To contact animation.com, please email us at hello@animation.com for more
+      info
+    </p>
 
     <div class="menu">
       <a href="/index.html" class="btn">Homepage</a>
