--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,23 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Stefanie Anselmi</title>
+    <title>Animation - Contact Page</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="text-center">
     <h1>Contact</h1>
-    <p>
-      To contact animation.com, please email us at hello@animation.com for more
-      info
-    </p>
+    <h2>
+      To contact animation.com, please email us at
+      <a href="mailto:hello@animation.com" alt="SendEmail">
+        hello@animation.com
+      </a>
+      for more info
+    </h2>
 
     <div class="menu">
-      <a href="/index.html" class="btn">Homepage</a>
-      <a href="/gallery.html" class="btn"> Photo </a>
-      <a href="/" class="btn">Contact</a>
+      <a href="/index.html" class="btn" alt="Homepage">Homepage</a>
+      <a href="/gallery.html" class="btn" alt="Photo"> Photo </a>
+      <a href="/" class="btn" alt="Contact">Contact</a>
     </div>
   </body>
 </html>
