--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="This is a little project for an animation website."
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap"
@@ -21,7 +25,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Stefanie Anselmi</title>
+    <title>Animation - Gallary Page</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="text-center">
