--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Stefanie Anselmi</title>
+    <title>Animation - Introduction: What is animation?</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="text-center">
@@ -37,15 +37,19 @@
       Other common animation methods apply a stop motion technique to two and
       three-dimensional objects like paper cutouts, puppets, or clay figures.
     </p>
-    <a href="https://en.wikipedia.org/wiki/Animation" target="_blank">
-      See more
+    <a
+      href="https://en.wikipedia.org/wiki/Animation"
+      target="_blank"
+      title="Animation on wikipedia"
+    >
+      Learn more
     </a>
     <br />
 
     <div class="menu">
-      <a href="/" class="btn">Homepage</a>
-      <a href="/gallery.html" class="btn"> Photo </a>
-      <a href="/contact.html" class="btn"> Contact</a>
+      <a href="/" class="btn" alt="Homepage">Homepage</a>
+      <a href="/gallery.html" class="btn" alt="Photo"> Photo </a>
+      <a href="/contact.html" class="btn" alt="Contact"> Contact</a>
     </div>
   </body>
 </html>
