--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap"
       rel="stylesheet"
     />
-
+    <meta
+      name="description"
+      content="This is a little project for an animation website."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
