--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="This is a little project for an animation website."
+      content="Do you need a website or a Front-end developer? Here I'm for you. You will find some of my project did on shecodes.io and a little more."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap"
@@ -24,35 +24,155 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Animation - Introduction: What is animation?</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Stefanie Anselmi - Front-end developer - Home Page</title>
+    <link href="/styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body class="text-center">
-    <h1>Animation 3D</h1>
-    <p>
-      Animation is a method in which figures are manipulated to appear as moving
-      images. In traditional animation, images are drawn or painted by hand on
-      transparent celluloid sheets to be photographed and exhibited on film.
-      Today, most animations are made with computer-generated imagery (CGI).
-      Computer animation can be very detailed 3D animation, while 2D computer
-      animation (which may have the look of traditional animation) can be used
-      for stylistic reasons, low bandwidth, or faster real-time renderings.
-      Other common animation methods apply a stop motion technique to two and
-      three-dimensional objects like paper cutouts, puppets, or clay figures.
-    </p>
-    <a
-      href="https://en.wikipedia.org/wiki/Animation"
-      target="_blank"
-      title="Animation on wikipedia"
-    >
-      Learn more
-    </a>
-    <br />
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Stefanie C. Anselmi</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html#contactEmail">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-sm">
+      <h2 class="text-center">
+        <!--&#x1F601!-->
+        Hi I am
+      </h2>
+      <h1 class="text-center">Stefanie Anselmi</h1>
 
-    <div class="menu">
-      <a href="/" class="btn" alt="Homepage">Homepage</a>
-      <a href="/gallery.html" class="btn" alt="Photo"> Photo </a>
-      <a href="/contact.html" class="btn" alt="Contact"> Contact</a>
+      <h3 class="text-center">
+        Front-end developer, based in Swiss
+        <!--&#x1F1ED!-->
+      </h3>
+      <div class="section">
+        <a href="/about.html#contactEmail" class="contact-btn">Contact me</a>
+        <a href="/about.html" class="about-btn">About me</a>
+      </div>
+
+      <!--progetti fatti-->
+
+      <div class="content text-center">
+        <div class="row">
+          <div class="col-sm-6 col-img d-none d-md-block">
+            <a
+              href="https://frosty-dubinsky-90fcba.netlify.app/"
+              target="_blank"
+              title="Go to weather App"
+            >
+              <img
+                src="/img/meteo.PNG"
+                class="img-fluid rounded-3"
+                alt="Preview weather app"
+            /></a>
+          </div>
+
+          <div class="col-sm-6">
+            <h2>Project weather</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="https://frosty-dubinsky-90fcba.netlify.app/"
+              target="_blank"
+              title="Go to weather App"
+              class="btn about-btn"
+            >
+              Lunch weather app
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6">
+            <h2>Videogame app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="/projects/finale-homework.html"
+              target="_blank"
+              title="Go to videogame App"
+              class="btn about-btn"
+            >
+              Lunch Videogame app
+            </a>
+          </div>
+
+          <div class="col-sm-6 col-img d-none d-md-block">
+            <a
+              href="/projects/finale-homework.html"
+              title="Go to videogame App"
+              target="_blank"
+            >
+              <img
+                class="img-fluid rounded-3"
+                src="/img/videogame-page.png"
+                alt="finale - videogame - project"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-img d-none d-md-block">
+            <a href="#" target="_blank" title="Go to Yoga App">
+              <img
+                src="/img/yoga.png"
+                class="img-fluid rounded-3"
+                alt="Yoga Image"
+              />
+            </a>
+          </div>
+
+          <div class="col-sm-6">
+            <h2>Project yoga</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a
+              href="/"
+              target="_blank"
+              class="btn about-btn"
+              title="Go to Yoga app"
+            >
+              Lunch yoga app
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
